--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/database32
+spring.datasource.url=jdbc:postgresql://localhost:5432/market-c32
 spring.datasource.username=postgres
 spring.datasource.password=root
 
